# backend-i-PEDRO

./: main.py
FinalProject/: pyproject.toml
FinalProject/SaaS/: Dockerfile  Makefile  compose.yaml  pyproject.toml
FinalProject/SaaS/EventManagement/: admin.py  models.py  urls.py  views.py
FinalProject/SaaS/EventManagement/migrations/: 0001_initial.py  0002_alter_events_eventname_guest.py  0003_events_participants.py
FinalProject/SaaS/EventManagement/templates/events/: event_detail.html  events_list.html
FinalProject/SaaS/SaaS/: asgi.py  settings.py  urls.py  wsgi.py
Project_Module/: README.md  pyproject.toml
Project_Module/src/project_module/: app.py
djproject/: Dockerfile  Makefile  README.md  compose.yaml  manage.py  pyproject.toml
djproject/.devcontainer/: devcontainer.json
djproject/restaurantes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
djproject/restaurantes/migrations/: 0001_initial.py  0002_remove_product_amount.py
djproject/restaurantes/templates/: admin_dashboard.html  admin_login.html  base.html  create_order.html  create_product.html  create_restaurant.html  dasboard.html  dashboard.html  order_success.html  restaurant_login.html
djproject/san_martino/: asgi.py  settings.py  urls.py  wsgi.py
session-1/src/: main.py
session-2/: pyproject.toml
session-2/src/: comprehension.py  functions.py
session_10/: pyproject.toml
session_10/src/session_10/: cliente.py  http_server.py
session_11/: pyproject.toml
session_11/src/session_11/: main.py
session_11/tests/: test_main.py
session_12/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
session_12/src/session_12/: main.py  models.py
session_13/: .dockerignore  Makefile
session_13/ops/: Dockerfile  compose.yaml  pyproject.toml
session_13/src/session_13/: main.py  models.py
session_13/tests/: test_api.py
session_14/: pyproject.toml
session_14/mysite/core/: models.py  views.py
session_14/mysite/core/migrations/: 0001_initial.py
session_14/mysite/mysite/: settings.py
session_15/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
session_15/djproject/: settings.py
session_15/djproject/templates/: base.html
session_15/todo/: __test.py  admin.py  forms.py  models.py  urls.py  views.py
session_15/todo/migrations/: 0001_initial.py
session_15/todo/templates/: base.html
session_15/todo/templates/registration/: login.html  signup.html
session_15/todo/templates/todo/: index.html  task_list.html
session_2/: pyproject.toml
session_2/src/session_2/: comprehensions.py  functions.py
session_3/: pyproject.toml
session_3/src/session_3/: store.py
session_4/: pyproject.toml
session_4/src/session_4/: iterators.py
session_5/: pyproject.toml
session_5/src/session_5/: ex.py
session_6/: pyproject.toml
session_6/src/session_6/: sample.py  test_sample.py
session_6/tests/: sample_test.py
session_7/: example_ClassWay.txt  example_Decorator.txt  pyproject.toml
session_7/src/session_7/: ex_classWay.py  ex_decoratorWay.py
session_8/: pyproject.toml
session_8/src/session_8/: app.py  challenge.py  ex.py  run.py
session_8/tests/: test_challenge.py  test_ex.py
session_9/: Dockerfile  compose.yaml  pyproject.toml
session_9/src/session_9/: app.py  bot.py
