[project]
name = "session-14"
version = "0.1.0"
description = ""
authors = [
    {name = "Huniity",email = "adrien.dejonc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)"
]

[tool.poetry]
packages = [{include = "session_14"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
